--- a/sources/css/import/_system/design.styl
+++ b/sources/css/import/_system/design.styl
@@ -5,3 +5,11 @@
 a, input
 	&:focus
 		outline 0
+
+for x in uppercase lowecase
+	.{x}
+		text-transform x
+
+for x in left center right
+	.{x}
+		text-align x
