--- a/sources/html/includes/toolbar.jade
+++ b/sources/html/includes/toolbar.jade
@@ -2,12 +2,21 @@ header.toolbar
 	.container
 		.row
 			.col-md-4.col-xs-3
-				.site-select.site-select--open
+				.site-select
 					a.site-select__trigger(href="#")
 						| Другие сайты холдинга
 						include ../../../public_html/layout/images/svg/arrow.svg
 					.site-select__dropdown
-						.site-select__link
+						a(href="#").site-select__link ТКС-холдинг
+						a(href="#").site-select__link аргус пайплайн сервис
+						a(href="#").site-select__link аргус свар сервис
+						a(href="#").site-select__link трубопровод контроль сервис
+						a(href="#").site-select__link спецнефтегаз-т
+						a(href="#").site-select__link уиц ронктд “спектр”
+						a(href="#").site-select__link интера
+						a(href="#").site-select__link мнпо “спектр”
+						a(href="#").site-select__link асц сварка стройтэк
+						a(href="#").site-select__link зто
 			.col-xs-2
 				.lang-trigger.lang-trigger--lang_russian(data-variant="russian,english")
 					span.lang-trigger__label RU
