--- a/sources/css/import/footer.styl
+++ b/sources/css/import/footer.styl
@@ -1,10 +1,11 @@
 .footer
 	full-width()
 	color #a3a3a3
+	overflow hidden
 	background black
 	border-top 1px solid #212121
 	height 65px
-	padding 24px 0
+	padding 22px 0
 	font-weight bold
 	text-transform uppercase
 	font-size 10px
@@ -15,3 +16,38 @@
 			color blue
 	.social
 		full-width()
+		line-height 70px
+		margin-top -22px
+		&__item
+			middle()
+			width 23px
+			height 23px
+			line-height 23px
+			margin 0 5px
+			opacity .5
+			text-align: center
+			t(opacity)
+			&:hover
+				opacity 1
+			svg
+				middle()
+				max-height 100%
+				max-width 100%
+	.radia
+		float right
+		t(opacity)
+		opacity .5
+		display none
+		.index &
+			display block
+		&:hover
+			opacity 1
+		svg
+			max-height 27px
+			max-width 27px
+			margin-right: 10px
+			float left
+		&__content
+			float left
+			color #fff
+			text-decoration: none
