--- a/sources/css/import/sidebar.styl
+++ b/sources/css/import/sidebar.styl
@@ -19,6 +19,7 @@
 			padding 3px 15px 0
 			margin-left -15px
 			margin-bottom 5px
+			white-space nowrap
 			&--active
 				color blue
 				border 1px solid blue
