--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -5,6 +5,21 @@ a:focus,
 input:focus {
   outline: 0;
 }
+.uppercase {
+  text-transform: uppercase;
+}
+.lowecase {
+  text-transform: lowecase;
+}
+.left {
+  text-align: left;
+}
+.center {
+  text-align: center;
+}
+.right {
+  text-align: right;
+}
 /*
  * Примеси
  */
@@ -33,10 +48,11 @@ input:focus {
   float: left;
   width: 100%;
   color: #a3a3a3;
+  overflow: hidden;
   background: #000;
   border-top: 1px solid #212121;
   height: 65px;
-  padding: 24px 0;
+  padding: 22px 0;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 10px;
@@ -51,6 +67,77 @@ input:focus {
 .footer .social {
   float: left;
   width: 100%;
+  line-height: 70px;
+  margin-top: -22px;
+}
+.footer .social__item {
+  display: inline-block;
+  vertical-align: middle;
+  width: 23px;
+  height: 23px;
+  line-height: 23px;
+  margin: 0 5px;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  text-align: center;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  -ms-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -ms-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.footer .social__item:hover {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.footer .social__item svg {
+  display: inline-block;
+  vertical-align: middle;
+  max-height: 100%;
+  max-width: 100%;
+}
+.footer .radia {
+  float: right;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  -ms-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -ms-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  display: none;
+}
+.index .footer .radia {
+  display: block;
+}
+.footer .radia:hover {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
+.footer .radia svg {
+  max-height: 27px;
+  max-width: 27px;
+  margin-right: 10px;
+  float: left;
+}
+.footer .radia__content {
+  float: left;
+  color: #fff;
+  text-decoration: none;
 }
 body {
   font-family: 'Proxima', 'Helvetica Neue', 'Arial', sans-serif;
@@ -60,6 +147,9 @@ body {
 }
 body.index {
   background: #000 url("../images/bg_index.jpg") top center no-repeat;
+}
+body.about {
+  background: #000 url("../images/bg_about.jpg") top center no-repeat;
 }
 a {
   -webkit-transition-property: color, background-color, border-radius, box-shadow, border-radius;
@@ -91,6 +181,51 @@ a:hover {
 html {
   height: 100%;
 }
+.index-page {
+  float: left;
+  width: 100%;
+  margin-top: 495px;
+  float: right;
+  max-width: 700px;
+}
+.index-page h1 {
+  float: right;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
+}
+.index-page .bages {
+  line-height: 54px;
+}
+.index-page .bages__image {
+  max-width: 54px;
+  margin-right: 10px;
+}
+.index-page .bages__title {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 60%;
+  line-height: 16px;
+  font-size: 11px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.page__title {
+  float: left;
+  width: 100%;
+  font-size: 45px;
+  color: #f0f4f9;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255,255,255,0.25);
+  margin-bottom: 30px;
+}
+.page__blue-title {
+  color: #00aafa;
+}
 .sidebar {
   float: left;
   width: 100%;
@@ -118,6 +253,7 @@ html {
   padding: 3px 15px 0;
   margin-left: -15px;
   margin-bottom: 5px;
+  white-space: nowrap;
 }
 .sidebar .nav-left__item--active {
   color: #0049d3;
@@ -169,6 +305,7 @@ html {
   height: 62px;
   margin-bottom: 35px;
   line-height: 63px;
+  z-index: 20;
   white-space: nowrap;
   background: rgba(0,0,0,0.5);
 }
@@ -179,12 +316,40 @@ html {
   font-weight: bold;
   font-size: 10px;
   text-transform: uppercase;
+  position: relative;
+}
+.toolbar .site-select--open .site-select__trigger svg path {
+  fill: #f0f4f9;
 }
 .toolbar .site-select__trigger {
   color: #f0f4f9;
+  position: relative;
+  z-index: 3;
 }
 .toolbar .site-select__trigger svg {
   margin-left: 10px;
+}
+.toolbar .site-select__dropdown {
+  display: none;
+  position: absolute;
+  top: 13px;
+  left: -13px;
+  background: #0049d3;
+  width: 200px;
+  padding: 35px 13px 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+.toolbar .site-select__link {
+  float: left;
+  clear: both;
+  color: #f0f4f9;
+  line-height: 20px;
+  text-decoration: underline;
+}
+.toolbar .site-select__link:hover {
+  color: #00aafa;
+  text-decoration: none;
 }
 .toolbar .lang-trigger {
   font-size: 11px;
