--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -5,6 +5,14 @@
 a, input
 	&:focus
 		outline 0
+
+for x in uppercase lowecase
+	.{x}
+		text-transform x
+
+for x in left center right
+	.{x}
+		text-align x
 /*!
  * Примеси
  */
@@ -52,10 +60,11 @@ white = #f0f4f9
 .footer
 	full-width()
 	color #a3a3a3
+	overflow hidden
 	background black
 	border-top 1px solid #212121
 	height 65px
-	padding 24px 0
+	padding 22px 0
 	font-weight bold
 	text-transform uppercase
 	font-size 10px
@@ -66,13 +75,49 @@ white = #f0f4f9
 			color blue
 	.social
 		full-width()
+		line-height 70px
+		margin-top -22px
+		&__item
+			middle()
+			width 23px
+			height 23px
+			line-height 23px
+			margin 0 5px
+			opacity .5
+			text-align: center
+			t(opacity)
+			&:hover
+				opacity 1
+			svg
+				middle()
+				max-height 100%
+				max-width 100%
+	.radia
+		float right
+		t(opacity)
+		opacity .5
+		display none
+		.index &
+			display block
+		&:hover
+			opacity 1
+		svg
+			max-height 27px
+			max-width 27px
+			margin-right: 10px
+			float left
+		&__content
+			float left
+			color #fff
+			text-decoration: none
 body
 	font-family 'Proxima', 'Helvetica Neue', 'Arial', sans-serif
 	height 100%
 	background-color black
 	color white
-	&.index
-		b('bg_index.jpg', top center no-repeat, black)
+	for x in index about
+		&.{x}
+			b('bg_'+x+'.jpg', top center no-repeat, black)
 a
 	transition-property color, background-color, border-radius, box-shadow, border-radius
 	transition-duration .3s
@@ -91,6 +136,43 @@ a
 
 html
 	height 100%
+
+.index-page
+	full-width()
+	margin-top 495px
+	float right
+	max-width 700px
+	h1
+		float right
+		padding-bottom 15px
+		margin-bottom 20px
+		font-size 24px
+		text-transform: uppercase
+		border-bottom 1px solid rgba(255,255,255,.5)
+	.bages
+		line-height: 54px
+		&__image
+			max-width 54px
+			margin-right: 10px
+		&__title
+			middle()
+			max-width 60%
+			line-height 16px
+			font-size 11px
+			text-transform: uppercase
+			font-weight: bold
+.page
+	&__title
+		full-width()
+		font-size 45px
+		color white
+		text-transform: uppercase
+		font-weight: bold
+		padding-bottom 20px
+		border-bottom 1px solid rgba(255,255,255,.25)
+		margin-bottom 30px
+	&__blue-title
+		color blue2
 .sidebar
 	full-width()
 	padding-bottom 80px
@@ -112,6 +194,7 @@ html
 			padding 3px 15px 0
 			margin-left -15px
 			margin-bottom 5px
+			white-space nowrap
 			&--active
 				color blue
 				border 1px solid blue
@@ -149,6 +232,7 @@ html
 	height 62px
 	margin-bottom 35px
 	line-height 63px
+	z-index 20
 	white-space nowrap
 	background rgba(0,0,0,.5)
 	.site-select
@@ -157,10 +241,37 @@ html
 		font-weight bold
 		font-size 10px
 		text-transform uppercase
+		position: relative
+		&--open
+			.site-select__trigger
+				svg
+					path
+						fill white
 		&__trigger
 			color white
+			position relative
+			z-index 3
 			svg
 				margin-left 10px
+		&__dropdown
+			display none
+			position absolute
+			top 13px
+			left -13px
+			background blue
+			width 200px
+			padding 35px 13px 5px
+			border-radius 5px
+		&__link
+			float: left
+			clear both
+			color white
+			line-height 20px
+			text-decoration: underline
+			&:hover
+				color blue2
+				text-decoration none
+
 	.lang-trigger
 		font-size 11px
 		font-weight bold
