--- a/sources/html/index.jade
+++ b/sources/html/index.jade
@@ -7,7 +7,7 @@ include includes/header
 	main.page
 		.container
 			.row
-				.col-md-3.col-xs-2
+				.col-xs-3.col-md-4
 					aside.sidebar
 						a(href="/").logo
 							include ../../public_html/layout/images/svg/logo.svg
@@ -24,7 +24,22 @@ include includes/header
 								.news__date 12.07.2014
 								a(href="#").news__title Представляем новые высокопроизводительные системы автоматической сварки трубопроводов Р-700 и М-400
 							a(href="#").news__more еще новости
-
-
+				.col-xs-9.col-md-8
+					article.index-page
+						h1.right Международная команда экспертов автоматической сварки трубопроводов мирового уровня
+						.bages
+							.row
+								.col-xs-4
+									.bages__item
+										img(src='./layout/images/icon-1.png').bages__image
+										.bages__title Ассоциированный член росснгс
+								.col-xs-4
+									.bages__item
+										img(src='./layout/images/icon-2.png').bages__image
+										.bages__title Ассоциированный член iploca
+								.col-xs-4
+									.bages__item
+										img(src='./layout/images/icon-3.png').bages__image
+										.bages__title Сертификация по стандарту ISO
 
 include includes/footer
