--- a/sources/css/import/fonts.styl
+++ b/sources/css/import/fonts.styl
@@ -14,4 +14,4 @@
 	font-family 'Proxima'
 	src url("../fonts/ProximaNova-Light.ttf")
 	src local('☺'), url('../fonts/ProximaNova-Light.ttf') format('truetype')
-	font-weight normal
+	font-weight 300
