--- a/sources/html/about.jade
+++ b/sources/html/about.jade
@@ -12,16 +12,48 @@ include includes/header
 						a(href="/").logo
 							include ../../public_html/layout/images/svg/logo.svg
 						nav.nav-left
-							a(href="#").nav-left__item.nav-left__item--active О компании
-							a(href="#").nav-left__item Новости
-							a(href="#").nav-left__item Услуги
-							a(href="#").nav-left__item Технологии
-							a(href="#").nav-left__item Наши проекты
-							a(href="#").nav-left__item Партнеры
-							a(href="#").nav-left__item Контакты
+							a(href="about.html").nav-left__item.nav-left__item--active О компании
+							a(href="news.html").nav-left__item Новости
+							a(href="services.html").nav-left__item Услуги
+							a(href="tech.html").nav-left__item Технологии
+							a(href="projects.html").nav-left__item Наши проекты
+							a(href="partners.html").nav-left__item Партнеры
+							a(href="contacts.html").nav-left__item Контакты
 						
 				.col-xs-9.col-md-8
 					article
 						h1.page__title О компании
+						.page__divider
 						h2.page__blue-title Аргус СварСервис – компания экспертов  в области сварочно-монтажных работы при строительстве и ремонте трубопроводов мирового уровня.
+						.row
+							.col-xs-6
+								ul.list
+									li Организация работы колонн автоматической сварки
+									li Организация мероприятий для вывода сварочных потоков на требуемую производительность и качество;
+									li Производство анализ причин возникновения дефектов и разработка мероприятий по их устранению;
+									li Обеспечение технической исправность оборудования и его бесперебойной работы; 
+									li Осуществление технологической поддержки автоматической сварки на этапе аттестации и на протяжении всего проекта;
+							.col-xs-6
+								ul.list
+									li Разработка технологических карт и сварочных процедур;
+									li Разработка и внедрение новых сварочных технологий к существующим условиям и задачам на объектах строительства;
+									li Предоставляем комплексы автоматической сварки в аренду с техническим персоналом и сварщиками;
+									li Осуществляем сварочно-монтажные работы на участках строительств магистральных трубопроводов различных диаметров и протяженностей, различных категорий.
+						.page__divider
+						.row
+							.col-xs-6
+								h4 Опыт работы в различных регионах и странах мира:
+								p Россия, Казахстан, Узбекистан, Азербайджан, Туркменистан, Белоруссия, Украина, Алжир, Ирак, ОАЭ, Китай, Индия
+								a.button(data-toggle="modal", data-target="#aboutVideo", href="#aboutVideo") смотрите видео о компании
+							.col-xs-6
+								img(src="./layout/images/map.png")
+
+
+.modal.fade(id="aboutVideo", tabindex="-1", role="dialog" aria-hidden="true")
+	.modal-dialog.modal-lg
+		.modal-content
+			a.close(data-dismiss="modal", href="#")
+				include ../../public_html/layout/images/svg/close.svg
+			| <iframe src="//player.vimeo.com/video/105264011?title=0&amp;byline=0&amp;badge=0&amp;color=0075cb" width="858" height="483" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 include includes/footer
