--- a/sources/html/includes/toolbar.jade
+++ b/sources/html/includes/toolbar.jade
@@ -31,4 +31,5 @@ header.toolbar
 			.col-xs-2
 				form.search
 					input.search__input(type="text", name="q")
-					input.search__submit(type="submit", value="")
+					button.search__submit(type="submit", value="")
+						include ../../../public_html/layout/images/svg/seach.svg
