--- a/sources/html/index.jade
+++ b/sources/html/index.jade
@@ -12,13 +12,13 @@ include includes/header
 						a(href="/").logo
 							include ../../public_html/layout/images/svg/logo.svg
 						nav.nav-left
-							a(href="#").nav-left__item О компании
-							a(href="#").nav-left__item Новости
-							a(href="#").nav-left__item Услуги
-							a(href="#").nav-left__item Технологии
-							a(href="#").nav-left__item Наши проекты
-							a(href="#").nav-left__item Партнеры
-							a(href="#").nav-left__item Контакты
+							a(href="about.html").nav-left__item О компании
+							a(href="news.html").nav-left__item Новости
+							a(href="services.html").nav-left__item Услуги
+							a(href="tech.html").nav-left__item Технологии
+							a(href="projects.html").nav-left__item Наши проекты
+							a(href="partners.html").nav-left__item Партнеры
+							a(href="contacts.html").nav-left__item Контакты
 						.news
 							.news__item
 								.news__date 12.07.2014
