--- a/sources/css/import/_system/plugins.styl
+++ b/sources/css/import/_system/plugins.styl
@@ -1,3 +1,7 @@
 /*
  * Модификаторы плагинов
  */
+ .fotorama__arr,.fotorama__fullscreen-icon,.fotorama__video-close,.fotorama__video-play
+	background-image url(/layout/plugins/fotorama.png)
+	@media (-webkit-min-device-pixel-ratio:1.5),(min-resolution:144dpi)
+		background-image url(/layout/images/plugins/fotorama@2x.png)
