--- a/sources/css/import/footer.styl
+++ b/sources/css/import/footer.styl
@@ -1,11 +1,13 @@
 .footer
 	full-width()
+	position relative
+	z-index 20
 	color #a3a3a3
 	overflow hidden
 	background black
 	border-top 1px solid #212121
-	height 65px
-	padding 22px 0
+	min-height 65px
+	padding 22px 0 13px
 	font-weight bold
 	text-transform uppercase
 	font-size 10px
@@ -16,8 +18,6 @@
 			color blue
 	.social
 		full-width()
-		line-height 70px
-		margin-top -22px
 		&__item
 			middle()
 			width 23px
