--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -1,11 +1,11 @@
 body
 	font-family 'Proxima', 'Helvetica Neue', 'Arial', sans-serif
+	min-height 100%
 	height 100%
-	background-color black
 	color white
-	for x in index about
-		&.{x}
-			b('bg_'+x+'.jpg', top center no-repeat, black)
+	&.map
+		min-height 850px
+	
 a
 	transition-property color, background-color, border-radius, box-shadow, border-radius
 	transition-duration .3s
@@ -13,7 +13,8 @@ a
 		text-decoration none
 .container
 	max-width 1150px
-
+	@media (max-width : 1024px)
+		max-width 980px
 .wrap 
 	min-height: 100%
 	padding-bottom 65px
@@ -21,10 +22,19 @@ a
 	&:after
 		content ""
 		display block
+	.transparent &
+		background transparent
+	b('bg.jpg', top center no-repeat, black, cover)
+	for x in index about contacts partners tech news
+		.{x} &
+			b('bg_'+x+'.jpg', top center no-repeat, black, cover)
 
 html
 	height 100%
 
+article
+	position relative
+	z-index 10
 .index-page
 	full-width()
 	margin-top 495px
@@ -49,3 +59,51 @@ html
 			font-size 11px
 			text-transform: uppercase
 			font-weight: bold
+
+.modal-lg
+	width 980px
+.modal-content
+	border-radius 0
+	background black
+	border 1px solid blue
+	padding 50px 60px
+	&--white
+		background white
+		border 0
+		padding 30px 40px
+		color black !important
+		p
+			font-size 16px
+			line-height 20px
+			margin-bottom 18px
+		h1
+			margin-top 10px
+			font-weight bold
+			font-size 30px
+			margin-bottom: 25px
+	.close
+		opacity 1
+		position absolute
+		top 0
+		right -100px
+		svg
+			path
+				fill blue
+	img
+		max-width 100%
+.modal-backdrop.in
+	opacity .8
+
+#map
+	width 100%
+	height 438px
+
+#bg_map
+	position absolute
+	background black
+	top 0
+	z-index 1
+	left 0
+	width 100%
+	height 100%
+	min-height 850px
