--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -102,7 +102,6 @@
 	.search
 		position relative
 		middle()
-		top -3px
 		width 100%
 		&__input
 			width 100%
@@ -118,9 +117,17 @@
 			padding-right 22px
 		&__submit
 			position absolute
-			width 13px
+			width 13px !important
 			height 13px
-			b('svg/seach.svg', center center no-repeat, transparent, cover)
+			//b('svg/seach.svg', center center no-repeat, transparent, cover)
+			appearance none
+			background transparent
 			border 0
 			right 6px
-			top 26px
+			top 23px
+			svg
+				position absolute
+				top 0
+				right 0
+				height 13px
+				width 13px
