--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -26,6 +26,8 @@ value = 0px 5px 10px 15px 20px 25px 30px
 value_sm = 5px 10px 15px 20px 25px 30px 35px
 
 for vx in margin padding
+	.no-{vx}
+		{vx} 0 !important
 	for vy in top left bottom right
 		.no-{vx}-{vy}
 			{vx}-{vy} 0 !important
@@ -269,6 +271,9 @@ article
 		iframe
 			height (900*.562)px
 
+	#Feedback &
+		max-width 600px
+
 .modal-content
 	full-width()
 	border-radius 0
@@ -363,6 +368,11 @@ article
 	display none
 	@media (min-width: scr_sm)
 		display block
+#Feedback .form
+	display block
+	margin-bottom 0
+	padding-bottom 0
+
 .modal
 	.lang-trigger
 		margin 17px 20px 15px
@@ -382,6 +392,8 @@ article
 		border-bottom 1px dotted white
 		text-align center
 		text-transform: uppercase
+	.success
+		display none
 	.form
 		full-width()
 		padding-bottom 40px
@@ -393,6 +405,12 @@ article
 			text-align center
 			font-size 10px
 			text-transform: uppercase
+		.captcha_refresh
+			float: left
+			margin-top 39px
+			svg
+				width 29px
+				height 30px
 		input[type="text"], input[type="email"], textarea
 			border 0
 			appearance none
@@ -403,6 +421,12 @@ article
 			padding-top 12px
 			line-height 27px
 			height 30px
+			@media (min-width: scr_sm)
+				padding-top 8px
+			&.parsley-error
+				box-shadow 0 0 0 2px red
+		.parsley-errors-list
+			display none !important
 		textarea
 			height 180px
 			text-align left
@@ -418,7 +442,8 @@ article
 			margin-bottom 20px
 			border-radius 30px
 			height 30px
-			border 1px solid blue2
+			font-size 14px
+			border 2px solid blue
 			padding 5px 25px 0
 			font-weight bold
 			text-transform: uppercase
