--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -45,7 +45,8 @@ article
 	full-width()
 	float right
 	max-width 715px
-	margin-top 240px
+	margin-top 220px
+	padding-top 20px
 	@media (min-width: scr_sm)
 		margin-top 495px
 	h1
