--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -329,10 +329,10 @@
 					display block
 			&__frame
 				padding 15px 15px 12px
-				t(background)
+				t(background-color)
 				background rgba(0,0,0,.45)
 				&:hover
-					background #0082dc
+					background #0082dc !important
 					color white
 					.news__date
 						color white
