--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -5112,7 +5112,8 @@ article
 
     width: 100%;
     max-width: 715px;
-    margin-top: 240px;
+    margin-top: 220px;
+    padding-top: 20px;
 }
 @media (min-width: 768px)
 {
@@ -6411,18 +6412,18 @@ article
         -ms-transition-duration: .3s;
          -o-transition-duration: .3s;
             transition-duration: .3s;
-    -webkit-transition-property: background;
-       -moz-transition-property: background;
-        -ms-transition-property: background;
-         -o-transition-property: background;
-            transition-property: background;
+    -webkit-transition-property: background-color;
+       -moz-transition-property: background-color;
+        -ms-transition-property: background-color;
+         -o-transition-property: background-color;
+            transition-property: background-color;
 
     background: rgba(0,0,0,.45);
 }
 .page article .news__frame:hover
 {
     color: #f4f4f4;
-    background: #0082dc;
+    background: #0082dc !important;
 }
 .page article .news__frame:hover .news__date
 {
@@ -6999,6 +7000,7 @@ article.index-page .news__more
     white-space: nowrap;
 
     background: rgba(0,0,0,.8);
+    background-position: top center !important;
 }
 @media (min-width: 768px)
 {
