--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -76,6 +76,7 @@
 		padding-top 0
 .toolbar
 	full-width()
+	background-position top center !important
 	position relative
 	height 62px
 	line-height 63px
