--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -805,6 +805,8 @@ article
 				vertical-align top
 				display inline-block
 				padding 0 7px 14px
+				&:hover
+					color white
 				@media (min-width: scr_sm)
 					width (100/2)%
 				@media (min-width: scr_md)
@@ -822,6 +824,7 @@ article
 				padding 15px 15px 12px
 				t(background-color)
 				background rgba(0,0,0,.45)
+				overflow hidden
 				&:hover
 					background #0082dc !important
 					color white
