--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -157,7 +157,7 @@
 			padding 13px 13px 7px
 			t(background)
 			&:hover
-				background #0082dc
+				background #0082dc !important
 				.tech__link
 					opacity 1
 			@media (min-width: scr_sm)
