--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1465,7 +1465,7 @@ article {
   }
 }
 .page .tech__item:hover {
-  background: #0082dc;
+  background: #0082dc !important;
 }
 .page .tech__item:hover .tech__link {
   opacity: 1;
