--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -648,7 +648,7 @@ article
 			padding 13px 13px 7px
 			t(background)
 			&:hover
-				background #0082dc
+				background #0082dc !important
 				.tech__link
 					opacity 1
 			@media (min-width: scr_sm)
