--- a/sources/css/import/sidebar.styl
+++ b/sources/css/import/sidebar.styl
@@ -10,9 +10,11 @@
 		@media (min-width: scr_sm)
 			margin-bottom 90px
 		svg
-			max-width 70%
+			max-width 40%
 			@media (min-width: scr_sm)
-				max-width 100%
+				max-width 120%
+			@media (min-width: scr_md)
+				max-width 70%
 	.nav-left
 		full-width()
 		margin-bottom 60px
