--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -953,9 +953,11 @@ article
 		@media (min-width: scr_sm)
 			margin-bottom 90px
 		svg
-			max-width 70%
+			max-width 40%
 			@media (min-width: scr_sm)
-				max-width 100%
+				max-width 120%
+			@media (min-width: scr_md)
+				max-width 70%
 	.nav-left
 		full-width()
 		margin-bottom 60px
@@ -1106,7 +1108,6 @@ article.index-page
 		padding-top 0
 .toolbar
 	full-width()
-	background-position top center !important
 	position relative
 	height 62px
 	line-height 63px
