--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -77,11 +77,11 @@
 .toolbar
 	full-width()
 	position relative
-	height 62px
-	line-height 63px
+	height 120px
+	line-height 58px
 	z-index 20
 	white-space nowrap
-	background rgba(0,0,0,.8)
+	background rgba(0,0,0,.5)
 	margin-bottom 20px
 	top 0
 	left 0
@@ -90,6 +90,53 @@
 		position relative
 		background rgba(0,0,0,.5)
 		margin-bottom 35px
+	.divider
+		full-width()
+		margin-top -5px
+		margin-bottom -5px
+		border-bottom 1px solid rgba(255,255,255,.2)
+		line-height 50px
+	.logo
+		full-width()
+		margin-left 20px
+		line-height 120px
+		svg
+			middle()
+			max-width 43%
+			@media (min-width: scr_sm)
+				max-width 70%
+			@media (min-width: scr_lg)
+				max-width 188px
+	.nav
+		full-width()
+		text-align justify
+		&__item
+			font-weight bold
+			text-transform uppercase
+			color white
+			line-height 31px
+			height 32px
+			@media (min-width: scr_sm)
+				font-size 15px
+				padding 3px 8.8px 0
+			@media (min-width: scr_lg)
+				font-size 16px
+				padding 3px 16.4px 0
+			margin-bottom 5px
+			white-space nowrap
+			&--active
+				color blue
+			&:first-of-type
+				padding-left 0
+			&:hover
+				color blue
+				text-decoration: none
+	.lang-trigger
+		@media (min-width: scr_sm)
+			margin-left 0px
+		@media (min-width: scr_lg)
+			margin-left 18px
+	/* Выбор сайтов холдинга */
 	.site-select
 		middle()
 		width 200px
@@ -97,6 +144,7 @@
 		font-size 10px
 		text-transform uppercase
 		position: relative
+		z-index 200
 		&--open
 			.site-select__trigger
 				svg
@@ -105,9 +153,14 @@
 		&__trigger
 			color white
 			position relative
+			top 1px
 			z-index 3
 			svg
 				margin-left 5px
+			span
+				display none
+				@media (min-width: scr_lg)
+					display inline
 		&__dropdown
 			display none
 			position absolute
@@ -126,6 +179,7 @@
 			&:hover
 				color blue2
 				text-decoration none
+	/* Тригер мобильного меню */
 	.nav-trigger
 		float right
 		position relative
@@ -141,6 +195,7 @@
 			middle()
 			max-width 23px
 			margin-left 7px
+	/* Тригеры попапов */
 	.popup-trigger
 		middle()
 		display inline
@@ -162,17 +217,15 @@
 			position relative
 			top -1px
 			margin-right 10px
-	.feedback
+	.feedback, .filials
 		middle()
 		text-transform uppercase
 		font-size 10px
 		color white
 		font-weight bold
-	.site-select span
+	.feedback
+		margin 0 25px
+	.search, .phone, .lang-trigger, .feedback, .filials
 		display none
 		@media (min-width: scr_sm)
-			display inline
-	.search, .phone, .lang-trigger, .feedback
-		display none
-		@media (min-width: scr_sm)
-			display block
+			display inline-block
