--- a/sources/html/includes/toolbar.jade
+++ b/sources/html/includes/toolbar.jade
@@ -1,44 +1,63 @@
 header.toolbar
 	.container
-		.row
-			.col-lg-4.col-sm-3.col-xs-4
-				.site-select
-					a.site-select__trigger(href="#")
-						span Другие 
-						| сайты холдинга
-						include ../../../public_html/layout/images/svg/arrow.svg
-					.site-select__dropdown
-						a(href="#").site-select__link ТКС-холдинг
-						a(href="#").site-select__link аргус пайплайн сервис
-						a(href="#").site-select__link трубопровод контроль сервис
-						a(href="#").site-select__link спецнефтегаз-т
-						a(href="#").site-select__link уиц ронктд “спектр”
-						a(href="#").site-select__link интера
-						a(href="#").site-select__link мнпо “спектр”
-						a(href="#").site-select__link асц сварка стройтэк
-						a(href="#").site-select__link зто
-			.col-sm-2.col-xs-3
-				a.popup-trigger(data-toggle="modal", data-target="#Contacts", href="#Contacts")
-					include ../../../public_html/layout/images/svg/phone.svg
-				a.popup-trigger(data-toggle="modal", data-target="#Search", href="#Search")
-					include ../../../public_html/layout/images/svg/seach.svg
-				.lang-trigger.lang-trigger--lang_russian(data-variant="russian,english")
-					span.lang-trigger__label RU
-					span.lang-trigger__carriage
-					span.lang-trigger__label EN
-			.col-xs-3.col-md-3.col-lg-2
-				a.phone(href="tel:88002005001")
-					include ../../../public_html/layout/images/svg/phone.svg
-					| 8 800 200 500 1
+		.row.no-gutter
+			.col-xs-3
+				a(href="/").logo
+					include ../../../public_html/layout/images/svg/logo.svg
+			.col-xs-9.no-padding-right
+				.row
+					.col-xs-2
+						.site-select
+							a.site-select__trigger(href="#")
+								span Все 
+								| сайты холдинга
+								include ../../../public_html/layout/images/svg/arrow.svg
+							.site-select__dropdown
+								a(href="#").site-select__link ТКС-холдинг
+								a(href="#").site-select__link аргус пайплайн сервис
+								a(href="#").site-select__link трубопровод контроль сервис
+								a(href="#").site-select__link спецнефтегаз-т
+								a(href="#").site-select__link уиц ронктд “спектр”
+								a(href="#").site-select__link интера
+								a(href="#").site-select__link мнпо “спектр”
+								a(href="#").site-select__link асц сварка стройтэк
+								a(href="#").site-select__link зто
+					.col-xs-2.col-lg-3
+						a.popup-trigger(data-toggle="modal", data-target="#Contacts", href="#Contacts")
+							include ../../../public_html/layout/images/svg/phone.svg
+						a.popup-trigger(data-toggle="modal", data-target="#Search", href="#Search")
+							include ../../../public_html/layout/images/svg/seach.svg
+						.lang-trigger.lang-trigger--lang_russian(data-variant="russian,english")
+							span.lang-trigger__label RU
+							span.lang-trigger__carriage
+							span.lang-trigger__label EN
+					.col-xs-3.md-right.lg-left
+						a.phone(href="tel:88002005001")
+							include ../../../public_html/layout/images/svg/phone.svg
+							| 8 800 200 500 1
 
-			.col-xs-2
-				a.feedback(href="#") Обратная связь
-				a(data-toggle="modal", data-target="#Nav", href="#Nav").nav-trigger
-					span Меню
-					include ../../../public_html/layout/images/svg/nav.svg
-			.col-xs-2
-
-				form.search
-					input.search__input(type="text", name="q")
-					button.search__submit(type="submit", value="")
-						include ../../../public_html/layout/images/svg/seach.svg
+					.col-xs-5.col-lg-4.right
+						a.filials(href="#") Филиальная сеть
+						a.feedback(href="#") Обратная связь
+						a.search-trigger(href="#")
+							include ../../../public_html/layout/images/svg/seach.svg
+						a(data-toggle="modal", data-target="#Nav", href="#Nav").nav-trigger
+							span Меню
+							include ../../../public_html/layout/images/svg/nav.svg
+				.divider
+				.row
+					.col-xs-12
+						nav.nav
+							a(href="about.html").nav__item О компании
+							a(href="news.html").nav__item Новости
+							a(href="services.html").nav__item Услуги
+							a(href="tech.html").nav__item Технологии
+							a(href="projects.html").nav__item Наши проекты
+							a(href="partners.html").nav__item Партнеры
+							a(href="contacts.html").nav__item Контакты
+				//
+					.col-xs-1
+						form.search
+							input.search__input(type="text", name="q")
+							button.search__submit(type="submit", value="")
+								include ../../../public_html/layout/images/svg/seach.svg
